kubernetes/apps/tools/argo-workflows/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-workflows
spec:
  hostnames:
    - ${APP_URL}
  parentRefs:
    - name: envoy-internal
      namespace: envoy-system
      sectionName: https
  rules:
    - backendRefs:
        - name: argo-workflows-server
          port: 2746
