kubernetes/apps/tools/argo-workflows/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argo-workflows-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/part-of: argo-workflows
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-system
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
    - from:
        - podSelector: {}
